--- a/indexcss.css
+++ b/indexcss.css
@@ -135,15 +135,17 @@ h1{
 .card.stacked:nth-of-type(2) { 
     background: url(img/card-bg/polygon.png); 
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 110%;
 }
 .card.stacked:nth-of-type(3) { 
     background: url(img/card-bg/blob.png);  
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 110%;
 }
-.card.stacked:nth-of-type(4) { 
-    background: #011e26; 
+.card.stacked:nth-of-type(5) { 
+    background: url(img/card-bg/polygrid.png);  
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 .labels a{ 
     border: 0.5px solid white; 
